<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.AddMeetingFragment"
    android:orientation="vertical"
    android:padding="17dp">


    <EditText
        android:id="@+id/subject_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:hint="@string/subject_text"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/participant_emails_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subject_edit_text"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:hint="@string/participants_emails_text"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:visibility="gone" />

    <TextView
        android:id="@+id/meeting_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/participant_emails_edit_text"
        android:layout_marginStart="37dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:layout_toEndOf="@+id/set_date_button"
        android:text="@string/date_text"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/set_date_button"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_below="@+id/participant_emails_edit_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="7dp"
        android:background="@android:color/transparent"
        android:text="@string/set_date_text"
        android:textColor="@color/purple_500" />

    <Button
        android:id="@+id/set_hour_button"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_below="@+id/set_date_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:background="@android:color/transparent"
        android:text="@string/set_hour_text"
        android:textColor="@color/purple_500" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/room_a_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_hour_button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="7dp"
        android:text="@string/room_a_text"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/room_b_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/room_a_switch"
        android:layout_alignParentStart="true"
        android:layout_marginTop="7dp"
        android:text="@string/room_b_text" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/room_c_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/room_b_switch"
        android:layout_alignParentStart="true"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:text="@string/room_c_text"/>

    <TextView
        android:id="@+id/meeting_hour_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/meeting_date_text"
        android:layout_marginStart="37dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="7dp"
        android:layout_toEndOf="@+id/set_hour_button"
        android:text="@string/hour_text"
        android:textSize="17sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/my_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_below="@+id/room_c_switch">

        <TextView
            android:id="@+id/participants_emails_text_add_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </ScrollView>


    <Button
        android:id="@+id/add_participant_email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_scroll_view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="17dp"
        android:gravity="center_horizontal"
        android:text="@string/add_participant_email_text" />

    <Button
        android:id="@+id/save_participant_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_participant_email_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="77dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="77dp"
        android:gravity="center_horizontal"
        android:text="@string/save_email_text"
        android:visibility="gone" />

    <Button
        android:id="@+id/save_meeting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/save_participant_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="77dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="77dp"
        android:text="@string/save_meeting_text" />

    <Button
        android:id="@+id/show_meeting_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/save_meeting_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="77dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="77dp"
        android:text="@string/show_all_meeting_text" />

</RelativeLayout>