...
            <TextView
                android:id="@+id/participants_emails_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/some_meeting_details_text"
                android:layout_marginStart="11dp"
                android:layout_toStartOf="@+id/delete_image_button"
                android:layout_toEndOf="@+id/meeting_image_view"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="@string/email_com_text"/>

            <ImageButton
...
